debug/parser.output
Terminals unused in grammar

    TLBRACK
    TRBRACK
    TDOT


State 65 conflicts: 12 shift/reduce
State 83 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: var_decl TSCOLON
    5     | func_decl
    6     | expr TSCOLON
    7     | if_stmt
    8     | for_stmt
    9     | while_stmt
   10     | ret_stmt TSCOLON
   11     | break_stmt TSCOLON
   12     | continue_stmt TSCOLON

   13 if_stmt: TIF expr TCOLON block
   14        | TIF expr TCOLON stmt
   15        | TIF expr TCOLON block TELSE TCOLON block
   16        | TIF expr TCOLON stmt TELSE TCOLON block
   17        | TIF expr TCOLON block TELSE TCOLON stmt
   18        | TIF expr TCOLON stmt TELSE TCOLON stmt

   19 iterator: TRANGE TLPAREN expr TRPAREN
   20         | TRANGE TLPAREN expr TCOMMA expr TRPAREN
   21         | TRANGE TLPAREN expr TCOMMA expr TCOMMA expr TRPAREN
   22         | TLLBRACK expr TCOMMA expr TRRBRACK

   23 for_stmt: TFOR var_decl TIN iterator TCOLON block
   24         | TFOR var_decl TIN iterator TCOLON stmt

   25 while_stmt: TWHILE expr TCOLON block
   26           | TWHILE expr TCOLON stmt

   27 break_stmt: TBREAK

   28 continue_stmt: TCONTINUE

   29 ret_stmt: TRET
   30         | TRET expr

   31 block: TLBRACE stmts TRBRACE
   32      | TLBRACE TRBRACE

   33 type: ident
   34     | type TRARROW ident

   35 var_decl: ident TCOLON type
   36         | ident TCOLON type TEQUAL expr

   37 func_decl: TFN ident TLPAREN func_decl_args TRPAREN TCOLON type block

   38 func_decl_args: ε
   39               | var_decl
   40               | func_decl_args TCOMMA var_decl

   41 ident: TIDENTIFIER

   42 cst_string: TCSTSTRING

   43 cst_int: TINTEGER

   44 expr: ident TEQUAL expr
   45     | ident TLPAREN call_args TRPAREN
   46     | ident
   47     | cst_int
   48     | cst_string
   49     | binop
   50     | TLPAREN expr TRPAREN
   51     | TTRUE
   52     | TFALSE

   53 call_args: ε
   54          | expr
   55          | call_args TCOMMA expr

   56 binop: expr TCEQ expr
   57      | expr TCNE expr
   58      | expr TCLT expr
   59      | expr TCLE expr
   60      | expr TCGT expr
   61      | expr TCGE expr
   62      | expr TPLUS expr
   63      | expr TMINUS expr
   64      | expr TMUL expr
   65      | expr TDIV expr
   66      | expr TMOD expr
   67      | expr TPOW expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TIDENTIFIER <string> (258) 41
    TINTEGER <string> (259) 43
    TCSTSTRING <string> (260) 42
    TTRUE <token> (261) 51
    TFALSE <token> (262) 52
    TCEQ <token> (263) 56
    TCNE <token> (264) 57
    TCLT <token> (265) 58
    TCLE <token> (266) 59
    TCGT <token> (267) 60
    TCGE <token> (268) 61
    TEQUAL <token> (269) 36 44
    TLPAREN <token> (270) 19 20 21 37 45 50
    TRPAREN <token> (271) 19 20 21 37 45 50
    TLBRACE <token> (272) 31 32
    TRBRACE <token> (273) 31 32
    TLBRACK <token> (274)
    TRBRACK <token> (275)
    TLLBRACK <token> (276) 22
    TRRBRACK <token> (277) 22
    TCOMMA <token> (278) 20 21 22 40 55
    TDOT <token> (279)
    TCOLON <token> (280) 13 14 15 16 17 18 23 24 25 26 35 36 37
    TSCOLON <token> (281) 4 6 10 11 12
    TPLUS <token> (282) 62
    TMINUS <token> (283) 63
    TMUL <token> (284) 64
    TDIV <token> (285) 65
    TMOD <token> (286) 66
    TPOW <token> (287) 67
    TIF <token> (288) 13 14 15 16 17 18
    TELSE <token> (289) 15 16 17 18
    TFN <token> (290) 37
    TWHILE <token> (291) 25 26
    TFOR <token> (292) 23 24
    TIN <token> (293) 23 24
    TRET <token> (294) 29 30
    TBREAK <token> (295) 27
    TCONTINUE <token> (296) 28
    TRANGE <token> (297) 19 20 21
    TRARROW <token> (298) 34


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program <block> (45)
        on left: 1
        on right: 0
    stmts <block> (46)
        on left: 2 3
        on right: 1 3 31
    stmt <stmt> (47)
        on left: 4 5 6 7 8 9 10 11 12
        on right: 2 3 14 16 17 18 24 26
    if_stmt <stmt> (48)
        on left: 13 14 15 16 17 18
        on right: 7
    iterator <iter> (49)
        on left: 19 20 21 22
        on right: 23 24
    for_stmt <stmt> (50)
        on left: 23 24
        on right: 8
    while_stmt <stmt> (51)
        on left: 25 26
        on right: 9
    break_stmt <stmt> (52)
        on left: 27
        on right: 11
    continue_stmt <stmt> (53)
        on left: 28
        on right: 12
    ret_stmt <stmt> (54)
        on left: 29 30
        on right: 10
    block <block> (55)
        on left: 31 32
        on right: 13 15 16 17 23 25 37
    type <exprvec> (56)
        on left: 33 34
        on right: 34 35 36 37
    var_decl <var_decl> (57)
        on left: 35 36
        on right: 4 23 24 39 40
    func_decl <stmt> (58)
        on left: 37
        on right: 5
    func_decl_args <varvec> (59)
        on left: 38 39 40
        on right: 37 40
    ident <ident> (60)
        on left: 41
        on right: 33 34 35 36 37 44 45 46
    cst_string <expr> (61)
        on left: 42
        on right: 48
    cst_int <expr> (62)
        on left: 43
        on right: 47
    expr <expr> (63)
        on left: 44 45 46 47 48 49 50 51 52
        on right: 6 13 14 15 16 17 18 19 20 21 22 25 26 30 36 44 50 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    call_args <exprvec> (64)
        on left: 53 54 55
        on right: 45 55
    binop <expr> (65)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 49


State 0

    0 $accept: • program $end

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TIF          shift, and go to state 7
    TFN          shift, and go to state 8
    TWHILE       shift, and go to state 9
    TFOR         shift, and go to state 10
    TRET         shift, and go to state 11
    TBREAK       shift, and go to state 12
    TCONTINUE    shift, and go to state 13

    program        go to state 14
    stmts          go to state 15
    stmt           go to state 16
    if_stmt        go to state 17
    for_stmt       go to state 18
    while_stmt     go to state 19
    break_stmt     go to state 20
    continue_stmt  go to state 21
    ret_stmt       go to state 22
    var_decl       go to state 23
    func_decl      go to state 24
    ident          go to state 25
    cst_string     go to state 26
    cst_int        go to state 27
    expr           go to state 28
    binop          go to state 29


State 1

   41 ident: TIDENTIFIER •

    $default  reduce using rule 41 (ident)


State 2

   43 cst_int: TINTEGER •

    $default  reduce using rule 43 (cst_int)


State 3

   42 cst_string: TCSTSTRING •

    $default  reduce using rule 42 (cst_string)


State 4

   51 expr: TTRUE •

    $default  reduce using rule 51 (expr)


State 5

   52 expr: TFALSE •

    $default  reduce using rule 52 (expr)


State 6

   50 expr: TLPAREN • expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 31
    binop       go to state 29


State 7

   13 if_stmt: TIF • expr TCOLON block
   14        | TIF • expr TCOLON stmt
   15        | TIF • expr TCOLON block TELSE TCOLON block
   16        | TIF • expr TCOLON stmt TELSE TCOLON block
   17        | TIF • expr TCOLON block TELSE TCOLON stmt
   18        | TIF • expr TCOLON stmt TELSE TCOLON stmt

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 32
    binop       go to state 29


State 8

   37 func_decl: TFN • ident TLPAREN func_decl_args TRPAREN TCOLON type block

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 33


State 9

   25 while_stmt: TWHILE • expr TCOLON block
   26           | TWHILE • expr TCOLON stmt

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 34
    binop       go to state 29


State 10

   23 for_stmt: TFOR • var_decl TIN iterator TCOLON block
   24         | TFOR • var_decl TIN iterator TCOLON stmt

    TIDENTIFIER  shift, and go to state 1

    var_decl  go to state 35
    ident     go to state 36


State 11

   29 ret_stmt: TRET •
   30         | TRET • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    $default  reduce using rule 29 (ret_stmt)

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 37
    binop       go to state 29


State 12

   27 break_stmt: TBREAK •

    $default  reduce using rule 27 (break_stmt)


State 13

   28 continue_stmt: TCONTINUE •

    $default  reduce using rule 28 (continue_stmt)


State 14

    0 $accept: program • $end

    $end  shift, and go to state 38


State 15

    1 program: stmts •
    3 stmts: stmts • stmt

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TIF          shift, and go to state 7
    TFN          shift, and go to state 8
    TWHILE       shift, and go to state 9
    TFOR         shift, and go to state 10
    TRET         shift, and go to state 11
    TBREAK       shift, and go to state 12
    TCONTINUE    shift, and go to state 13

    $default  reduce using rule 1 (program)

    stmt           go to state 39
    if_stmt        go to state 17
    for_stmt       go to state 18
    while_stmt     go to state 19
    break_stmt     go to state 20
    continue_stmt  go to state 21
    ret_stmt       go to state 22
    var_decl       go to state 23
    func_decl      go to state 24
    ident          go to state 25
    cst_string     go to state 26
    cst_int        go to state 27
    expr           go to state 28
    binop          go to state 29


State 16

    2 stmts: stmt •

    $default  reduce using rule 2 (stmts)


State 17

    7 stmt: if_stmt •

    $default  reduce using rule 7 (stmt)


State 18

    8 stmt: for_stmt •

    $default  reduce using rule 8 (stmt)


State 19

    9 stmt: while_stmt •

    $default  reduce using rule 9 (stmt)


State 20

   11 stmt: break_stmt • TSCOLON

    TSCOLON  shift, and go to state 40


State 21

   12 stmt: continue_stmt • TSCOLON

    TSCOLON  shift, and go to state 41


State 22

   10 stmt: ret_stmt • TSCOLON

    TSCOLON  shift, and go to state 42


State 23

    4 stmt: var_decl • TSCOLON

    TSCOLON  shift, and go to state 43


State 24

    5 stmt: func_decl •

    $default  reduce using rule 5 (stmt)


State 25

   35 var_decl: ident • TCOLON type
   36         | ident • TCOLON type TEQUAL expr
   44 expr: ident • TEQUAL expr
   45     | ident • TLPAREN call_args TRPAREN
   46     | ident •

    TEQUAL   shift, and go to state 44
    TLPAREN  shift, and go to state 45
    TCOLON   shift, and go to state 46

    $default  reduce using rule 46 (expr)


State 26

   48 expr: cst_string •

    $default  reduce using rule 48 (expr)


State 27

   47 expr: cst_int •

    $default  reduce using rule 47 (expr)


State 28

    6 stmt: expr • TSCOLON
   56 binop: expr • TCEQ expr
   57      | expr • TCNE expr
   58      | expr • TCLT expr
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr

    TCEQ     shift, and go to state 47
    TCNE     shift, and go to state 48
    TCLT     shift, and go to state 49
    TCLE     shift, and go to state 50
    TCGT     shift, and go to state 51
    TCGE     shift, and go to state 52
    TSCOLON  shift, and go to state 53
    TPLUS    shift, and go to state 54
    TMINUS   shift, and go to state 55
    TMUL     shift, and go to state 56
    TDIV     shift, and go to state 57
    TMOD     shift, and go to state 58
    TPOW     shift, and go to state 59


State 29

   49 expr: binop •

    $default  reduce using rule 49 (expr)


State 30

   44 expr: ident • TEQUAL expr
   45     | ident • TLPAREN call_args TRPAREN
   46     | ident •

    TEQUAL   shift, and go to state 44
    TLPAREN  shift, and go to state 45

    $default  reduce using rule 46 (expr)


State 31

   50 expr: TLPAREN expr • TRPAREN
   56 binop: expr • TCEQ expr
   57      | expr • TCNE expr
   58      | expr • TCLT expr
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr

    TCEQ     shift, and go to state 47
    TCNE     shift, and go to state 48
    TCLT     shift, and go to state 49
    TCLE     shift, and go to state 50
    TCGT     shift, and go to state 51
    TCGE     shift, and go to state 52
    TRPAREN  shift, and go to state 60
    TPLUS    shift, and go to state 54
    TMINUS   shift, and go to state 55
    TMUL     shift, and go to state 56
    TDIV     shift, and go to state 57
    TMOD     shift, and go to state 58
    TPOW     shift, and go to state 59


State 32

   13 if_stmt: TIF expr • TCOLON block
   14        | TIF expr • TCOLON stmt
   15        | TIF expr • TCOLON block TELSE TCOLON block
   16        | TIF expr • TCOLON stmt TELSE TCOLON block
   17        | TIF expr • TCOLON block TELSE TCOLON stmt
   18        | TIF expr • TCOLON stmt TELSE TCOLON stmt
   56 binop: expr • TCEQ expr
   57      | expr • TCNE expr
   58      | expr • TCLT expr
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr

    TCEQ    shift, and go to state 47
    TCNE    shift, and go to state 48
    TCLT    shift, and go to state 49
    TCLE    shift, and go to state 50
    TCGT    shift, and go to state 51
    TCGE    shift, and go to state 52
    TCOLON  shift, and go to state 61
    TPLUS   shift, and go to state 54
    TMINUS  shift, and go to state 55
    TMUL    shift, and go to state 56
    TDIV    shift, and go to state 57
    TMOD    shift, and go to state 58
    TPOW    shift, and go to state 59


State 33

   37 func_decl: TFN ident • TLPAREN func_decl_args TRPAREN TCOLON type block

    TLPAREN  shift, and go to state 62


State 34

   25 while_stmt: TWHILE expr • TCOLON block
   26           | TWHILE expr • TCOLON stmt
   56 binop: expr • TCEQ expr
   57      | expr • TCNE expr
   58      | expr • TCLT expr
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr

    TCEQ    shift, and go to state 47
    TCNE    shift, and go to state 48
    TCLT    shift, and go to state 49
    TCLE    shift, and go to state 50
    TCGT    shift, and go to state 51
    TCGE    shift, and go to state 52
    TCOLON  shift, and go to state 63
    TPLUS   shift, and go to state 54
    TMINUS  shift, and go to state 55
    TMUL    shift, and go to state 56
    TDIV    shift, and go to state 57
    TMOD    shift, and go to state 58
    TPOW    shift, and go to state 59


State 35

   23 for_stmt: TFOR var_decl • TIN iterator TCOLON block
   24         | TFOR var_decl • TIN iterator TCOLON stmt

    TIN  shift, and go to state 64


State 36

   35 var_decl: ident • TCOLON type
   36         | ident • TCOLON type TEQUAL expr

    TCOLON  shift, and go to state 46


State 37

   30 ret_stmt: TRET expr •
   56 binop: expr • TCEQ expr
   57      | expr • TCNE expr
   58      | expr • TCLT expr
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr

    TCEQ    shift, and go to state 47
    TCNE    shift, and go to state 48
    TCLT    shift, and go to state 49
    TCLE    shift, and go to state 50
    TCGT    shift, and go to state 51
    TCGE    shift, and go to state 52
    TPLUS   shift, and go to state 54
    TMINUS  shift, and go to state 55
    TMUL    shift, and go to state 56
    TDIV    shift, and go to state 57
    TMOD    shift, and go to state 58
    TPOW    shift, and go to state 59

    $default  reduce using rule 30 (ret_stmt)


State 38

    0 $accept: program $end •

    $default  accept


State 39

    3 stmts: stmts stmt •

    $default  reduce using rule 3 (stmts)


State 40

   11 stmt: break_stmt TSCOLON •

    $default  reduce using rule 11 (stmt)


State 41

   12 stmt: continue_stmt TSCOLON •

    $default  reduce using rule 12 (stmt)


State 42

   10 stmt: ret_stmt TSCOLON •

    $default  reduce using rule 10 (stmt)


State 43

    4 stmt: var_decl TSCOLON •

    $default  reduce using rule 4 (stmt)


State 44

   44 expr: ident TEQUAL • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 65
    binop       go to state 29


State 45

   45 expr: ident TLPAREN • call_args TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    $default  reduce using rule 53 (call_args)

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 66
    call_args   go to state 67
    binop       go to state 29


State 46

   35 var_decl: ident TCOLON • type
   36         | ident TCOLON • type TEQUAL expr

    TIDENTIFIER  shift, and go to state 1

    type   go to state 68
    ident  go to state 69


State 47

   56 binop: expr TCEQ • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 70
    binop       go to state 29


State 48

   57 binop: expr TCNE • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 71
    binop       go to state 29


State 49

   58 binop: expr TCLT • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 72
    binop       go to state 29


State 50

   59 binop: expr TCLE • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 73
    binop       go to state 29


State 51

   60 binop: expr TCGT • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 74
    binop       go to state 29


State 52

   61 binop: expr TCGE • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 75
    binop       go to state 29


State 53

    6 stmt: expr TSCOLON •

    $default  reduce using rule 6 (stmt)


State 54

   62 binop: expr TPLUS • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 76
    binop       go to state 29


State 55

   63 binop: expr TMINUS • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 77
    binop       go to state 29


State 56

   64 binop: expr TMUL • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 78
    binop       go to state 29


State 57

   65 binop: expr TDIV • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 79
    binop       go to state 29


State 58

   66 binop: expr TMOD • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 80
    binop       go to state 29


State 59

   67 binop: expr TPOW • expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6

    ident       go to state 30
    cst_string  go to state 26
    cst_int     go to state 27
    expr        go to state 81
    binop       go to state 29


State 60

   50 expr: TLPAREN expr TRPAREN •

    $default  reduce using rule 50 (expr)


State 61

   13 if_stmt: TIF expr TCOLON • block
   14        | TIF expr TCOLON • stmt
   15        | TIF expr TCOLON • block TELSE TCOLON block
   16        | TIF expr TCOLON • stmt TELSE TCOLON block
   17        | TIF expr TCOLON • block TELSE TCOLON stmt
   18        | TIF expr TCOLON • stmt TELSE TCOLON stmt

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACE      shift, and go to state 82
    TIF          shift, and go to state 7
    TFN          shift, and go to state 8
    TWHILE       shift, and go to state 9
    TFOR         shift, and go to state 10
    TRET         shift, and go to state 11
    TBREAK       shift, and go to state 12
    TCONTINUE    shift, and go to state 13

    stmt           go to state 83
    if_stmt        go to state 17
    for_stmt       go to state 18
    while_stmt     go to state 19
    break_stmt     go to state 20
    continue_stmt  go to state 21
    ret_stmt       go to state 22
    block          go to state 84
    var_decl       go to state 23
    func_decl      go to state 24
    ident          go to state 25
    cst_string     go to state 26
    cst_int        go to state 27
    expr           go to state 28
    binop          go to state 29


State 62

   37 func_decl: TFN ident TLPAREN • func_decl_args TRPAREN TCOLON type block

    TIDENTIFIER  shift, and go to state 1

    $default  reduce using rule 38 (func_decl_args)

    var_decl        go to state 85
    func_decl_args  go to state 86
    ident           go to state 36


State 63

   25 while_stmt: TWHILE expr TCOLON • block
   26           | TWHILE expr TCOLON • stmt

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TCSTSTRING   shift, and go to state 3
    TTRUE        shift, and go to state 4
    TFALSE       shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACE      shift, and go to state 82
    TIF          shift, and go to state 7
    TFN          shift, and go to state 8
    TWHILE       shift, and go to state 9
    TFOR         shift, and go to state 10
    TRET         shift, and go to state 11
    TBREAK       shift, and go to state 12
    TCONTINUE    shift, and go to state 13

    stmt           go to state 87
    if_stmt        go to state 17
    for_stmt       go to state 18
    while_stmt     go to state 19
    break_stmt     go to state 20
    continue_stmt  go to state 21
    ret_stmt       go to state 22
    block          go to state 88
    var_decl       go to state 23
    func_decl      go to state 24
    ident          go to state 25
    cst_string     go to state 26
    cst_int        go to state 27
    expr           go to state 28
    binop          go to state 29


State 64

   23 for_stmt: TFOR var_decl TIN • iterator TCOLON block
   24         | TFOR var_decl TIN • iterator TCOLON stmt

    TLLBRACK  shift, and go to state 89
    TRANGE    shift, and go to state 90

    iterator  go to state 91


State 65

   44 expr: ident TEQUAL expr •
   56 binop: expr • TCEQ expr
   57      | expr • TCNE expr
   58      | expr • TCLT expr
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr

    TCEQ    shift, and go to state 47
    TCNE    shift, and go to state 48
    TCLT    shift, and go to state 49
    TCLE    shift, and go to state 50
    TCGT    shift, and go to state 51
    TCGE    shift, and go to state 52
    TPLUS   shift, and go to state 54
    TMINUS  shift, and go to state 55
    TMUL    shift, and go to state 56
    TDIV    shift, and go to state 57
    TMOD    shift, and go to state 58
    TPOW    shift, and go to state 59

    TCEQ      [reduce using rule 44 (expr)]
    TCNE      [reduce using rule 44 (expr)]
    TCLT      [reduce using rule 44 (expr)]
    TCLE      [reduce using rule 44 (expr)]
    TCGT      [reduce using rule 44 (expr)]
    TCGE      [reduce using rule 44 (expr)]
    TPLUS     [reduce using rule 44 (expr)]
    TMINUS    [reduce using rule 44 (expr)]
    TMUL      [reduce using rule 44 (expr)]
    TDIV      [reduce using rule 44 (expr)]
    TMOD      [reduce using rule 44 (expr)]
    TPOW      [reduce using rule 44 (expr)]
    $default  reduce using rule 44 (expr)


State 66

   54 call_args: expr •
   56 binop: expr • TCEQ expr
   57      | expr • TCNE expr
   58      | expr • TCLT expr
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr

    TCEQ    shift, and go to state 47
    TCNE    shift, and go to state 48
    TCLT    shift, and go to state 49
    TCLE    shift, and go to state 50
    TCGT    shift, and go to state 51
    TCGE    shift, and go to state 52
    TPLUS   shift, and go to state 54
    TMINUS  shift, and go to state 55
    TMUL    shift, and go to state 56
    TDIV    shift, and go to state 57
    TMOD    shift, and go to state 58
    TPOW    shift, and go to state 59

    $default  reduce using rule 54 (call_args)


State 67

   45 expr: ident TLPAREN call_args • TRPAREN
   55 call_args: call_args • TCOMMA expr

    TRPAREN  shift, and go to state 92
    TCOMMA   shift, and go to state 93


State 68

   34 type: type • TRARROW ident
   35 var_decl: ident TCOLON type •
   36         | ident TCOLON type • TEQUAL expr

    TEQUAL   shift, and go to state 94
    TRARROW  shift, and go to state 95

    $default  reduce using rule 35 (var_decl)


State 69

   33 type: ident •

    $default  reduce using rule 33 (type)


State 70

   56 binop: expr • TCEQ expr
   56      | expr TCEQ expr •
   57      | expr • TCNE expr
   58      | expr • TCLT expr
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr

    TPLUS   shift, and go to state 54
    TMINUS  shift, and go to state 55
    TMUL    shift, and go to state 56
    TDIV    shift, and go to state 57
    TMOD    shift, and go to state 58
    TPOW    shift, and go to state 59

    $default  reduce using rule 56 (binop)


State 71

   56 binop: expr • TCEQ expr
   57      | expr • TCNE expr
   57      | expr TCNE expr •
   58      | expr • TCLT expr
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr

    TPLUS   shift, and go to state 54
    TMINUS  shift, and go to state 55
    TMUL    shift, and go to state 56
    TDIV    shift, and go to state 57
    TMOD    shift, and go to state 58
    TPOW    shift, and go to state 59

    $default  reduce using rule 57 (binop)


State 72

   56 binop: expr • TCEQ expr
   57      | expr • TCNE expr
   58      | expr • TCLT expr
   58      | expr TCLT expr •
   59      | expr • TCLE expr
   60      | expr • TCGT expr
   61      | expr • TCGE expr
   62      | expr • TPLUS expr
   63      | expr • TMINUS expr
   64      | expr • TMUL expr
   65      | expr • TDIV expr
   66      | expr • TMOD expr
   67      | expr • TPOW expr
